Kaleyard (#16)
Add handling for modern builds:

* Can detect and launch AppImages - version detection and resume game not yet functional.
Can detect and launch FlatPaks.

* Can detect and launch AppImages.
Can detect and launch FlatPaks.

* Can detect and launch AppImages and FlatPaks, both for version and debug support.

* Aligh splash screen to background

* Print number of oolite connections on shutdown

* Reduce urge to extract Flatpak and AppImage to get version info

* Reduce urge to extract Flatpak and AppImage to get debug support

* Do not complain about OoliteStarter's own OXP, even if the author
is converted to '*'.

* Show hidden directories to fix #10.

* Upgrade to more secure logging framework

* Have a bias for scanning the user's home to improve on #11.

* Improve Javadoc and logging

* Better visualize intent of download button

* Better visualize intent of download button

* The release appimages names start with capital O while the prerelease appimages start with small o. Allow both to match a valid Oolite installation. (#11)

* In case of matching problems better pinpoint where the problem occurred and do not break the init process. Instead warnings are emitted to the logfile. (#13)

* React to Node.js 20 deprecation warning

* Fix logging actual values

* Fix logging actual values (#13)

* Add more tracing to find out issues on user side

* Add more tracing to find out issues on user side (#11)

* Prevent splash during probes (#14)

* Warn when skipping a duplicate installation and prevent scanning the trash can. (#11)

* Oolite sometimes is picky on which command line option is last. Try the other way round. (#14)

* Make it more obvious how users can update their expansions. (#15)

* Make it more obvious how users can update their expansions. (#15)

* Oolite may simply need to have options as separate arguments. (#14)

* Scan directories that are symlinked at least once. (#11)

* Prevent splash during probes (#14)

* It was never intended to 